--- a/index.html
+++ b/index.html
@@ -3,9 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h>My MIST-5250 Business Website</h>
+    <header>
+      <div class="logo">
+        <img src="logo.webp" alt="My Logo" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section id="about">
+        <h1>Welcome to My Portfolio</h1>
+        <p>
+          Hi, I'm a website developer. Check out my work and feel free to
+          contact me!
+        </p>
+      </section>
+
+      <section id="services">
+        <h2>Services</h2>
+        <div class="services-container">
+          <div class="service">
+            <h3>Software Development</h3>
+            <p>Custom software solutions tailored to your business needs.</p>
+          </div>
+          <div class="service">
+            <h3>Website Design</h3>
+            <p>
+              Beautiful and responsive website designs to enhance your online
+              presence.
+            </p>
+          </div>
+          <div class="service">
+            <h3>Machine Learning</h3>
+            <p>
+              Innovative machine learning solutions to drive your business
+              forward.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2023 My Portfolio</p>
+    </footer>
   </body>
 </html>
