--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
         </p>
       </section>
 
+      <section id="about-me" class="my-5">
+        <div class="about-content text-center">
+          <p>
+            I am a Full-Stack Engineer with 16+ years of experience creating
+            Software using .NET MVC, Node.js, NestJS, Express, React, React
+            Native, Next.js, Vue, ElasticSearch, WebRTC, SQL, MongoDB, Redis,
+            CommerceTools and more. A collaborative engineer with good
+            communication and interpersonal skills. Ability to understand and
+            adapt to client requirements, along with an innovative
+            problem-solving approach, ensures consistent delivery of
+            high-quality results.
+          </p>
+        </div>
+      </section>
+
       <section id="services" class="my-5">
         <h2 class="text-center">Services</h2>
         <div class="row text-center">
